project(Chapter2)

add_executable(Lent main)

add_library(Sampler SHARED Sampler)
add_library(BrownianMotion SHARED BrownianMotion)
add_library(UniformSampler SHARED UniformSampler)
add_library(ExpDoubleSampler SHARED ExpDoubleSampler)
add_library(NormalAccSampler SHARED NormalAccSampler)
add_library(AcceptanceRejectionSampler SHARED AcceptanceRejectionSampler)
add_library(NormalBoxMullerSampler SHARED NormalBoxMullerSampler)
add_library(MonteCarloSimulation SHARED MonteCarloSimulation)

target_link_libraries(Lent Sampler)
target_link_libraries(Lent BrownianMotion)
target_link_libraries(Lent UniformSampler)
target_link_libraries(Lent ExpDoubleSampler)
target_link_libraries(Lent AcceptanceRejectionSampler)
target_link_libraries(Lent NormalAccSampler)
target_link_libraries(Lent NormalBoxMullerSampler)
target_link_libraries(Lent MonteCarloSimulation)
