cmake_minimum_required(VERSION 2.8)
project(Chapter2)

add_executable(Lent main)
#add_executable(Q1 Q1)
#add_executable(Q2 Q2)
#add_executable(Q3 Q3)
add_executable(Q4 Q4)

set(CMAKE_CXX_FLAGS "-g -std=c++11")

add_library(Normals SHARED Normals)
add_library(Sampler SHARED Sampler)
add_library(ConstantSampler SHARED ConstantSampler)
add_library(UniformSampler SHARED UniformSampler)
add_library(ExpDoubleSampler SHARED ExpDoubleSampler)
add_library(ExpInvSampler SHARED ExpInvSampler)
add_library(NormalAccSampler SHARED NormalAccSampler)
add_library(AcceptanceRejectionSampler SHARED AcceptanceRejectionSampler)
add_library(NormalBoxMullerSampler SHARED NormalBoxMullerSampler)

add_library(MonteCarloSimulation SHARED MonteCarloSimulation)
add_library(ControlVariates SHARED ControlVariates)

add_library(StochasticProcess SHARED StochasticProcess)
add_library(BrownianMotion SHARED BrownianMotion)
add_library(GeometricBrownianMotion SHARED GeometricBrownianMotion)
add_library(CompoundPoissonProcess SHARED CompoundPoissonProcess)
add_library(PoissonProcess SHARED PoissonProcess)


add_library(dataExport SHARED dataExport)

target_link_libraries(Lent Normals)
target_link_libraries(Lent Sampler)
target_link_libraries(Lent ConstantSampler)
target_link_libraries(Lent StochasticProcess)
target_link_libraries(Lent BrownianMotion)
target_link_libraries(Lent UniformSampler)
target_link_libraries(Lent ExpInvSampler)
target_link_libraries(Lent ExpDoubleSampler)
target_link_libraries(Lent AcceptanceRejectionSampler)
target_link_libraries(Lent NormalAccSampler)
target_link_libraries(Lent NormalBoxMullerSampler)
target_link_libraries(Lent MonteCarloSimulation)
target_link_libraries(Lent ControlVariates)


#target_link_libraries(Q3 ExpInvSampler)
#target_link_libraries(Q3 UniformSampler)
#target_link_libraries(Q3 MonteCarloSimulation)

target_link_libraries(Q4 Sampler)
target_link_libraries(Q4 ConstantSampler)
SET_TARGET_PROPERTIES(ConstantSampler PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(Q4 UniformSampler)
target_link_libraries(Q4 ExpInvSampler)
target_link_libraries(Q4 ExpDoubleSampler)
target_link_libraries(Q4 NormalBoxMullerSampler)
target_link_libraries(Q4 StochasticProcess)
target_link_libraries(Q4 BrownianMotion)
target_link_libraries(Q4 GeometricBrownianMotion)
target_link_libraries(Q4 CompoundPoissonProcess)
target_link_libraries(Q4 PoissonProcess)
target_link_libraries(Q4 dataExport)
